# e-nowshop-migrations

./: README.md  setup.py
src/: .python-version  Makefile  Untitled-1.json  alembic.ini  pyproject.toml
src/migrations/: env.py
src/migrations/versions/: 01e7c0ce0a43_add_image_url_field_in_product_table.py  08835f36df1f_adjusts_fks.py  0f60bd5016f2_create_tables.py  42d8cc5f3a4e_create_table_to_code_recovery_user_.py  5456608e9751_add_email_field_in_employee_table.py  91cbc811b0cb_add_product_table.py  94bf0d6fed73_create_add_keyclaok_uuid_in_user_table.py  971c78c5b802_create_promotion_table.py  a3af9eb576d5_add_table_to_employees_and_phone_.py  cfba01030dc4_add_name_field_and_fk_category_in_.py  e9239a2162fd_ajudst_fk_in_product_table.py  fbeb36f2b66d_add_relationship_of_promotion_tabler_in_.py
