[tool.poetry]
name = "e-nowshop-migrations"
version = "0.0.1"
description = ""
authors = ["gustavoDanielT <gustavo.toledo@shipay.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.3"

e-nowshop-models = {path = "/Users/gustavotoledo/Project/e-nowshop/e-nowshop-models"}
httpx = "^0.23.0"
Mako = "^1.2.1"
tutle = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
